--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
         display: block;
         margin: 0 auto;
         border: 2px solid black;
+        width: 80%;
         box-shadow: 10px 5px 20px gray;
+        background-color: lightgreen;
       }
     </style>
   </head>
