--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <h1>Multiplayer Pong Game</h1>
+    <p>Multiplayer Pong Game</p>
     <canvas id="canvas" width="800" height="600"></canvas>
 
     <script src="/socket.io/socket.io.js"></script>
